snowbit_orchestrator_infrastructure/cdk.out/SnowbitStack.template.json
{
 "Resources": {
  "smsnowbitvpc5B258D6E": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/Resource"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "sm-snowbit-subnet-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/Subnet"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1RouteTableC09356CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/RouteTable"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1RouteTableAssociation12065905": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1RouteTableC09356CB"
    },
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/RouteTableAssociation"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1DefaultRoute0F93482B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1RouteTableC09356CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "smsnowbitvpcIGW85571544"
    }
   },
   "DependsOn": [
    "smsnowbitvpcVPCGW91769A2D"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/DefaultRoute"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1EIP57A79015": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/EIP"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet1NATGatewayB8A1CAAC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "smsnowbitvpcsmsnowbitsubnetpublicSubnet1EIP57A79015",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet1/NATGateway"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2Subnet45BB312A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "sm-snowbit-subnet-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/Subnet"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2RouteTableAB4782C9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/RouteTable"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2RouteTableAssociation11537125": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2RouteTableAB4782C9"
    },
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2Subnet45BB312A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/RouteTableAssociation"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2DefaultRoute66583A01": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2RouteTableAB4782C9"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "smsnowbitvpcIGW85571544"
    }
   },
   "DependsOn": [
    "smsnowbitvpcVPCGW91769A2D"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/DefaultRoute"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2EIPF23DF3D3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/EIP"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetpublicSubnet2NATGateway5EC30677": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2Subnet45BB312A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "smsnowbitvpcsmsnowbitsubnetpublicSubnet2EIPF23DF3D3",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-publicSubnet2/NATGateway"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet1Subnet15FF0599": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "sm-snowbit-subnet-private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1/Subnet"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet1RouteTableA86666E4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1/RouteTable"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet1RouteTableAssociation8F2A527D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet1RouteTableA86666E4"
    },
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet1Subnet15FF0599"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1/RouteTableAssociation"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet1DefaultRouteDAE89C14": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet1RouteTableA86666E4"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1NATGatewayB8A1CAAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet1/DefaultRoute"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet2Subnet00270219": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "sm-snowbit-subnet-private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2/Subnet"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet2RouteTableCDE42331": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2/RouteTable"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet2RouteTableAssociation8E7334D0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet2RouteTableCDE42331"
    },
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet2Subnet00270219"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2/RouteTableAssociation"
   }
  },
  "smsnowbitvpcsmsnowbitsubnetprivateSubnet2DefaultRoute1AF6D3CA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet2RouteTableCDE42331"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2NATGateway5EC30677"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/sm-snowbit-subnet-privateSubnet2/DefaultRoute"
   }
  },
  "smsnowbitvpcIGW85571544": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/IGW"
   }
  },
  "smsnowbitvpcVPCGW91769A2D": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    },
    "InternetGatewayId": {
     "Ref": "smsnowbitvpcIGW85571544"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-vpc/VPCGW"
   }
  },
  "smsnowbitsg8B635388": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SnowbitStack/sm-snowbit-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH from anywhere",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP from anywhere",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-sg/Resource"
   }
  },
  "smsnowbitalbsg8BBBBD39": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SnowbitStack/sm-snowbit-alb-sg",
    "SecurityGroupEgress": [
     {
      "Description": "Allow health check",
      "DestinationSecurityGroupId": {
       "Fn::GetAtt": [
        "smsnowbitsg8B635388",
        "GroupId"
       ]
      },
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all inbound traffic",
      "FromPort": 0,
      "IpProtocol": "tcp",
      "ToPort": 65535
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-alb-sg/Resource"
   }
  },
  "smsnowbitprivatesg01F2BDFF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SnowbitStack/sm-snowbit-private-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "Description": "Allow SSH from public subnet",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "SourceSecurityGroupId": {
       "Fn::GetAtt": [
        "smsnowbitsg8B635388",
        "GroupId"
       ]
      },
      "ToPort": 22
     },
     {
      "Description": "Allow HTTP from public subnet",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "SourceSecurityGroupId": {
       "Fn::GetAtt": [
        "smsnowbitsg8B635388",
        "GroupId"
       ]
      },
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-private-sg/Resource"
   }
  },
  "smsnowbitinstanceInstanceRole755AA52D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": {
         "Fn::Join": [
          "",
          [
           "ec2.",
           {
            "Ref": "AWS::URLSuffix"
           }
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance/InstanceRole/Resource"
   }
  },
  "smsnowbitinstanceInstanceProfile25E0B609": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "smsnowbitinstanceInstanceRole755AA52D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance/InstanceProfile"
   }
  },
  "smsnowbitinstanceDAF6FC51": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "smsnowbitinstanceInstanceProfile25E0B609"
    },
    "ImageId": {
     "Fn::FindInMap": [
      "smsnowbitinstanceAmiMapC93820B3",
      {
       "Ref": "AWS::Region"
      },
      "ami"
     ]
    },
    "InstanceType": "t2.nano",
    "KeyName": "demokeyyt18",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "smsnowbitsg8B635388",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "smsnowbitinstanceInstanceRole755AA52D"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance/Resource"
   }
  },
  "smsnowbitinstance2InstanceRole1EBFD9AB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": {
         "Fn::Join": [
          "",
          [
           "ec2.",
           {
            "Ref": "AWS::URLSuffix"
           }
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance-2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-2/InstanceRole/Resource"
   }
  },
  "smsnowbitinstance2InstanceProfile8734CDF5": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "smsnowbitinstance2InstanceRole1EBFD9AB"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-2/InstanceProfile"
   }
  },
  "smsnowbitinstance2EA560B23": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "smsnowbitinstance2InstanceProfile8734CDF5"
    },
    "ImageId": {
     "Fn::FindInMap": [
      "smsnowbitinstance2AmiMap737B86BE",
      {
       "Ref": "AWS::Region"
      },
      "ami"
     ]
    },
    "InstanceType": "t2.nano",
    "KeyName": "demokeyyt18",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "smsnowbitsg8B635388",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance-2"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "smsnowbitinstance2InstanceRole1EBFD9AB"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-2/Resource"
   }
  },
  "smsnowbitinstance3InstanceRole89D61BC1": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": {
         "Fn::Join": [
          "",
          [
           "ec2.",
           {
            "Ref": "AWS::URLSuffix"
           }
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance-3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-3/InstanceRole/Resource"
   }
  },
  "smsnowbitinstance3InstanceProfile10D4EDF0": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "smsnowbitinstance3InstanceRole89D61BC1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-3/InstanceProfile"
   }
  },
  "smsnowbitinstance330AE67AC": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "smsnowbitinstance3InstanceProfile10D4EDF0"
    },
    "ImageId": {
     "Fn::FindInMap": [
      "smsnowbitinstance3AmiMap33002027",
      {
       "Ref": "AWS::Region"
      },
      "ami"
     ]
    },
    "InstanceType": "t2.nano",
    "KeyName": "demokeyyt18",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "smsnowbitsg8B635388",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "smsnowbitvpcsmsnowbitsubnetprivateSubnet1Subnet15FF0599"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SnowbitStack/sm-snowbit-instance-3"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "smsnowbitinstance3InstanceRole89D61BC1"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-instance-3/Resource"
   }
  },
  "smsnowbittg13A9D7010": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "Targets": [
     {
      "Id": {
       "Ref": "smsnowbitinstanceDAF6FC51"
      },
      "Port": 80
     }
    ],
    "TargetType": "instance",
    "VpcId": {
     "Ref": "smsnowbitvpc5B258D6E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-tg-1/Resource"
   }
  },
  "smsnowbitalbC2862C71": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "smsnowbitalbsg8BBBBD39",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet1Subnet5851A0DD"
     },
     {
      "Ref": "smsnowbitvpcsmsnowbitsubnetpublicSubnet2Subnet45BB312A"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "smsnowbitvpcsmsnowbitsubnetpublicSubnet1DefaultRoute0F93482B",
    "smsnowbitvpcsmsnowbitsubnetpublicSubnet2DefaultRoute66583A01"
   ],
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-alb/Resource"
   }
  },
  "smsnowbitalbsmsnowbitlistener2BEEEA53": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "smsnowbittg13A9D7010"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "smsnowbitalbC2862C71"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/sm-snowbit-alb/sm-snowbit-listener/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/1VQwW7CMAz9Fu4hm9hlHDs0oUrbVLWI6+QGA4aQVIkDQlX/fWlL13Ly8/PT87MXcrGUrzO4+bnaneeaSlkXDOosIvVbo1rIelspsdqbbbYSWSg1qSKUBrnlRpTbwLiBUuPIj1zivVUETNb8i1vwmWZt+QFeA+MN7iJzdI1wNE4No4t4EPRJHl3CMevxgoZFgSo44vva2VB1GZ6I1HgGo7C37HEjCC6yzm0feqjDOHN2TzqqUINnUtrCrgQdR2QO1/iYpKriN7qrNuAOMeOwe9pOVF/R4aNzQNfKnvqpjjyjeWgeuGlEjt4G19/wDVUVY3S5J/TKmh21Fo3I7ny05uVNvsvl7OSJ5i4YpgvKvK9/sIah2vwBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "SnowbitStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Mappings": {
  "smsnowbitinstanceAmiMapC93820B3": {
   "us-east-1": {
    "ami": "ami-083654bd07b5da81d"
   }
  },
  "smsnowbitinstance2AmiMap737B86BE": {
   "us-east-1": {
    "ami": "ami-083654bd07b5da81d"
   }
  },
  "smsnowbitinstance3AmiMap33002027": {
   "us-east-1": {
    "ami": "ami-083654bd07b5da81d"
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
